--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<div class="p-5 bg-dark">hello</div>
+<app-page-layout>
+  <div header>app-header</div>
+
+  <div body>content router outlet</div>
+
+  <div footer>app-footer</div>
+</app-page-layout>
