--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -9,6 +9,7 @@
   --color-grey-subtle: #B3B3B3;
   --color-light-black: #333333;
   --color-dark-grey: #D1D1D1;
+  --color-main-background: #FCFCFC;
 
   --color-green: 126 21% 38%;
 
@@ -82,3 +83,4 @@
     @apply bg-background text-foreground;
   }
 }
+
