Fix: header layout adjustments

--- a/src/app/common/user-avatar/user-avatar.component.html
+++ b/src/app/common/user-avatar/user-avatar.component.html
@@ -1,4 +1,4 @@
 <div class="user-avatar">
-  <img [src]="avatarUrl" alt="User Avatar" class="avatar">
-  <span class="username">{{ username }}</span>
+  <img [src]="avatarUrl" alt="User Avatar" class="user-avatar__avatar">
+  <span class="user-avatar__username">{{ username }}</span>
 </div>
