--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <app-page-layout>
-  <div header>app-header</div>
+  <div header>
+    <app-header></app-header>
+  </div>
 
-  <div body>content router outlet</div>
+  <div body>
+    <router-outlet></router-outlet>
+  </div>
 
-  <div footer>app-footer</div>
+  <!-- Footer будет добавлен позже вашим коллегой -->
 </app-page-layout>
