--- a/src/app/common/user-avatar/user-avatar.component.scss
+++ b/src/app/common/user-avatar/user-avatar.component.scss
@@ -7,7 +7,8 @@
     width: 142px;
     height: 50px;
   
-    .avatar {
+    
+  &__avatar {
       width: 50px;
       height: 50px;
       border-radius: 50px;
@@ -19,7 +20,8 @@
       display: block;
     }
   
-    .username {
+    
+  &__username {
       width: 82px;
       height: 22px;
       font-family: 'Montserrat', sans-serif;
@@ -37,12 +39,12 @@
       width: auto;
       gap: 10px;
   
-      .avatar {
+      &__avatar {
         width: 40px;
         height: 40px;
       }
   
-      .username {
+      &__username {
         font-size: 16px;
         line-height: 20px;
         width: auto;
@@ -53,12 +55,12 @@
       width: auto;
       gap: 8px;
   
-      .avatar {
+      &__avatar {
         width: 36px;
         height: 36px;
       }
   
-      .username {
+      &__username {
         font-size: 14px;
         line-height: 18px;
       }
