Сохранение текущих изменений в шапке

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,9 @@
   <div header>
     <app-header></app-header>
   </div>
-
   <div body>
+    <app-prompt-block></app-prompt-block>
     <router-outlet></router-outlet>
   </div>
-
   <!-- Footer будет добавлен позже вашим коллегой -->
 </app-page-layout>
